// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: WeatherSearchForm enter a valid value \`par\` should enable the form and the button 1`] = `"par"`;

exports[`component: WeatherSearchForm enter a valid value \`par\` should enable the form and the button 2`] = `false`;

exports[`component: WeatherSearchForm enter a valid value \`par\` should enable the form and the button 3`] = `
Array [
  Array [
    "par",
  ],
]
`;

exports[`component: WeatherSearchForm enter a valid value \`paris\` should enable the form and the button 1`] = `"paris"`;

exports[`component: WeatherSearchForm enter a valid value \`paris\` should enable the form and the button 2`] = `false`;

exports[`component: WeatherSearchForm enter a valid value \`paris\` should enable the form and the button 3`] = `
Array [
  Array [
    "paris",
  ],
]
`;

exports[`component: WeatherSearchForm enter an invalid value \`empty\` should disable the form and the button 1`] = `""`;

exports[`component: WeatherSearchForm enter an invalid value \`empty\` should disable the form and the button 2`] = `true`;

exports[`component: WeatherSearchForm enter an invalid value \`empty\` should disable the form and the button 3`] = `Array []`;

exports[`component: WeatherSearchForm enter an invalid value \`p\` should disable the form and the button 1`] = `"p"`;

exports[`component: WeatherSearchForm enter an invalid value \`p\` should disable the form and the button 2`] = `true`;

exports[`component: WeatherSearchForm enter an invalid value \`p\` should disable the form and the button 3`] = `Array []`;

exports[`component: WeatherSearchForm enter an invalid value \`pa\` should disable the form and the button 1`] = `"pa"`;

exports[`component: WeatherSearchForm enter an invalid value \`pa\` should disable the form and the button 2`] = `true`;

exports[`component: WeatherSearchForm enter an invalid value \`pa\` should disable the form and the button 3`] = `Array []`;

exports[`component: WeatherSearchForm enter an invalid value \`white space prefix\` should disable the form and the button 1`] = `" pa"`;

exports[`component: WeatherSearchForm enter an invalid value \`white space prefix\` should disable the form and the button 2`] = `true`;

exports[`component: WeatherSearchForm enter an invalid value \`white space prefix\` should disable the form and the button 3`] = `Array []`;

exports[`component: WeatherSearchForm enter an invalid value \`white space suffix\` should disable the form and the button 1`] = `"pa "`;

exports[`component: WeatherSearchForm enter an invalid value \`white space suffix\` should disable the form and the button 2`] = `true`;

exports[`component: WeatherSearchForm enter an invalid value \`white space suffix\` should disable the form and the button 3`] = `Array []`;

exports[`component: WeatherSearchForm enter an invalid value \`white space\` should disable the form and the button 1`] = `" "`;

exports[`component: WeatherSearchForm enter an invalid value \`white space\` should disable the form and the button 2`] = `true`;

exports[`component: WeatherSearchForm enter an invalid value \`white space\` should disable the form and the button 3`] = `Array []`;

exports[`component: WeatherSearchForm loading set to true should disable the button and replace the icon with a spinner 1`] = `
<button
  aria-label="Search"
  class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-392 Mui-disabled Mui-disabled"
  data-testid="submit"
  disabled=""
  tabindex="-1"
  type="submit"
>
  <span
    class="MuiIconButton-label"
  >
    <div
      class="MuiCircularProgress-root makeStyles-progress-393 MuiCircularProgress-colorPrimary MuiCircularProgress-indeterminate"
      role="progressbar"
      style="width: 24px; height: 24px;"
    >
      <svg
        class="MuiCircularProgress-svg"
        viewBox="22 22 44 44"
      >
        <circle
          class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate"
          cx="44"
          cy="44"
          fill="none"
          r="20.2"
          stroke-width="3.6"
        />
      </svg>
    </div>
  </span>
</button>
`;

exports[`component: WeatherSearchForm loading set to true should disable the button and replace the icon with a spinner 2`] = `true`;

exports[`component: WeatherSearchForm render the component 1`] = `
<div>
  <form
    class="makeStyles-root-1"
    data-testid="form"
  >
    <div
      class="MuiInputBase-root makeStyles-input-2 Mui-focused"
      data-testid="input"
    >
      <input
        aria-label="Enter the city name"
        class="MuiInputBase-input"
        placeholder="Enter the city name"
        type="text"
        value=""
      />
    </div>
    <button
      aria-label="Search"
      class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-3 Mui-disabled Mui-disabled"
      data-testid="submit"
      disabled=""
      tabindex="-1"
      type="submit"
    >
      <span
        class="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M15.5 14h-.79l-.28-.27C15.41 12.59 16 11.11 16 9.5 16 5.91 13.09 3 9.5 3S3 5.91 3 9.5 5.91 16 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
    </button>
  </form>
</div>
`;
